--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@heroui/button": "2.2.9",
+    "@heroui/card": "^2.2.10",
     "@heroui/code": "2.2.6",
     "@heroui/dropdown": "2.3.9",
     "@heroui/input": "2.4.9",
     "@heroui/kbd": "2.2.6",
     "@heroui/link": "2.2.7",
     "@heroui/navbar": "2.2.8",
+    "@heroui/react": "^2.6.14",
     "@heroui/snippet": "2.2.10",
     "@heroui/switch": "2.2.8",
     "@heroui/system": "2.4.6",
