--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@heroui/theme": "2.4.5",
     "@react-aria/visually-hidden": "3.8.12",
     "@react-types/shared": "3.26.0",
+    "@tanstack/react-query": "^5.66.0",
+    "axios": "^1.7.9",
     "clsx": "2.1.1",
     "framer-motion": "11.15.0",
     "lucide-react": "^0.474.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "6.23.0",
     "tailwind-variants": "0.1.20",
     "tailwindcss": "3.4.16"
